--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -1941,7 +1941,7 @@
 
                             <Border Background="#DD3F3F46" CornerRadius="5" Padding="10"
                                 HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,10"
-                                Visibility="{Binding ImageProcessing.SelectedItemsCount, Converter={StaticResource CountToVisibilityConverter}}"> <!-- ИЗМЕНЕНО: Используем другой конвертер -->
+                                Visibility="{Binding ImageProcessing.SelectedItemsCount, Converter={StaticResource CountToVisibilityConverter}}">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock VerticalAlignment="Center" Margin="0,0,10,0">
                                             <Run Text="{local:Translate Tab_SelectedItems}" />
@@ -1951,20 +1951,128 @@
                                     <Button Content="{local:Translate SliderCompare_Compare}" Margin="0,0,5,0"
                                             Command="{Binding CompareSelectedImagesCommand}"
                                                 CommandParameter="{Binding ElementName=lvOutputs, Path=SelectedItems}" />
-                                        <Button Content="{local:Translate Tab_SaveSelected}"
-                                                Background="{StaticResource SuccessBrush}"
-                                            Command="{Binding ImageProcessing.SaveSelectedImagesCommand}"
-                                                CommandParameter="{Binding ElementName=lvOutputs, Path=SelectedItems}" />
-                                        <Button Content="{local:Translate Tab_SaveSelectedAs}"
-                                                Background="{StaticResource SuccessBrush}"
-                                                Command="{Binding ImageProcessing.SaveSelectedImagesAsCommand}"
-                                                CommandParameter="{Binding ElementName=lvOutputs, Path=SelectedItems}" 
-                                                Margin="5,0,0,0"/>
-                                        <Button Content="{local:Translate Tab_DeleteSelected}"
-                                                Background="{StaticResource ErrorBrush}"
-                                            Command="{Binding ImageProcessing.DeleteSelectedImagesCommand}"
-                                            CommandParameter="{Binding ElementName=lvOutputs, Path=SelectedItems}"
-                                                Margin="5,0,0,0" />
+                                    
+                                    <!-- Save Button -->
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="Auto"/>
+                                        </Grid.ColumnDefinitions>
+                                        <Button Grid.Column="0" Background="{StaticResource SuccessBrush}"
+                                                Command="{Binding ImageProcessing.SaveSelectedImagesCommand}" CommandParameter="{Binding ElementName=lvOutputs, Path=SelectedItems}"
+                                                Padding="8,5">
+                                            <Button.Content>
+                                                <MultiBinding Converter="{StaticResource SaveButtonTextConverter}">
+                                                    <Binding Source="{x:Static local:LocalizationService.Instance}" Path="[Gallery_SaveFormat]"/>
+                                                    <Binding Path="Settings.SaveFormat"/>
+                                                    <Binding Path="ImageProcessing.IsAnyVideoSelected"/>
+                                                    <Binding Source="{x:Static local:LocalizationService.Instance}" Path="[Tab_SaveSelected]"/>
+                                                </MultiBinding>
+                                            </Button.Content>
+                                            <Button.Template>
+                                                <ControlTemplate TargetType="Button">
+                                                    <Border x:Name="ButtonBorder" Background="{TemplateBinding Background}" CornerRadius="3,0,0,3">
+                                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" Margin="{TemplateBinding Padding}"/>
+                                                    </Border>
+                                                    <ControlTemplate.Triggers>
+                                                        <DataTrigger Binding="{Binding Visibility, ElementName=SaveFormatToggle}" Value="Collapsed">
+                                                            <Setter TargetName="ButtonBorder" Property="CornerRadius" Value="3"/>
+                                                        </DataTrigger>
+                                                    </ControlTemplate.Triggers>
+                                                </ControlTemplate>
+                                            </Button.Template>
+                                        </Button>
+                                        <ToggleButton x:Name="SaveFormatToggle" Grid.Column="1" Background="{StaticResource SuccessBrush}" Width="25"
+                                                      Visibility="{Binding ImageProcessing.IsAnyVideoSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=invert}">
+                                            <ToggleButton.Template>
+                                                <ControlTemplate TargetType="ToggleButton">
+                                                    <Border Background="{TemplateBinding Background}" CornerRadius="0,3,3,0"><TextBlock Text="▼" FontSize="8" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"/></Border>
+                                                </ControlTemplate>
+                                            </ToggleButton.Template>
+                                        </ToggleButton>
+                                        <Popup IsOpen="{Binding IsChecked, ElementName=SaveFormatToggle}" StaysOpen="False" Placement="Top" AllowsTransparency="True">
+                                            <Border Background="{StaticResource SecondaryBackground}" BorderBrush="{StaticResource TertiaryBackground}" BorderThickness="1" CornerRadius="3">
+                                                <StackPanel>
+                                                    <MenuItem Header="{local:Translate Gallery_SaveAsPng}" Command="{Binding ImageProcessing.SaveSelectedImagesWithFormatCommand}" Click="SaveFormatMenuItem_Click"
+                                                              Visibility="{Binding DataContext.Settings.SaveFormat, RelativeSource={RelativeSource AncestorType=Window}, Converter={StaticResource HideIfEqualConverter}, ConverterParameter={x:Static local:ImageSaveFormat.Png}}">
+                                                        <MenuItem.CommandParameter><MultiBinding Converter="{StaticResource MultiValueToArrayConverter}"><Binding ElementName="lvOutputs" Path="SelectedItems"/><Binding Source="{x:Static local:ImageSaveFormat.Png}"/></MultiBinding></MenuItem.CommandParameter>
+                                                    </MenuItem>
+                                                    <MenuItem Header="{local:Translate Gallery_SaveAsJpg}" Command="{Binding ImageProcessing.SaveSelectedImagesWithFormatCommand}" Click="SaveFormatMenuItem_Click"
+                                                              Visibility="{Binding DataContext.Settings.SaveFormat, RelativeSource={RelativeSource AncestorType=Window}, Converter={StaticResource HideIfEqualConverter}, ConverterParameter={x:Static local:ImageSaveFormat.Jpg}}">
+                                                        <MenuItem.CommandParameter><MultiBinding Converter="{StaticResource MultiValueToArrayConverter}"><Binding ElementName="lvOutputs" Path="SelectedItems"/><Binding Source="{x:Static local:ImageSaveFormat.Jpg}"/></MultiBinding></MenuItem.CommandParameter>
+                                                    </MenuItem>
+                                                    <MenuItem Header="{local:Translate Gallery_SaveAsWebp}" Command="{Binding ImageProcessing.SaveSelectedImagesWithFormatCommand}" Click="SaveFormatMenuItem_Click"
+                                                              Visibility="{Binding DataContext.Settings.SaveFormat, RelativeSource={RelativeSource AncestorType=Window}, Converter={StaticResource HideIfEqualConverter}, ConverterParameter={x:Static local:ImageSaveFormat.Webp}}">
+                                                        <MenuItem.CommandParameter><MultiBinding Converter="{StaticResource MultiValueToArrayConverter}"><Binding ElementName="lvOutputs" Path="SelectedItems"/><Binding Source="{x:Static local:ImageSaveFormat.Webp}"/></MultiBinding></MenuItem.CommandParameter>
+                                                    </MenuItem>
+                                                </StackPanel>
+                                            </Border>
+                                        </Popup>
+                                    </Grid>
+
+                                    <!-- Save As Button -->
+                                    <Grid Margin="5,0,0,0">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="Auto"/>
+                                        </Grid.ColumnDefinitions>
+                                        <Button Grid.Column="0" Background="{StaticResource SuccessBrush}"
+                                                Command="{Binding ImageProcessing.SaveSelectedImagesAsCommand}" CommandParameter="{Binding ElementName=lvOutputs, Path=SelectedItems}"
+                                                Padding="8,5">
+                                            <Button.Content>
+                                                <MultiBinding Converter="{StaticResource SaveButtonTextConverter}">
+                                                    <Binding Source="{x:Static local:LocalizationService.Instance}" Path="[Gallery_SaveFormatAs]"/>
+                                                    <Binding Path="Settings.SaveFormat"/>
+                                                    <Binding Path="ImageProcessing.IsAnyVideoSelected"/>
+                                                    <Binding Source="{x:Static local:LocalizationService.Instance}" Path="[Tab_SaveSelectedAs]"/>
+                                                </MultiBinding>
+                                            </Button.Content>
+                                            <Button.Template>
+                                                <ControlTemplate TargetType="Button">
+                                                    <Border x:Name="ButtonBorder" Background="{TemplateBinding Background}" CornerRadius="3,0,0,3">
+                                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" Margin="{TemplateBinding Padding}"/>
+                                                    </Border>
+                                                    <ControlTemplate.Triggers>
+                                                        <DataTrigger Binding="{Binding Visibility, ElementName=SaveAsFormatToggle}" Value="Collapsed">
+                                                            <Setter TargetName="ButtonBorder" Property="CornerRadius" Value="3"/>
+                                                        </DataTrigger>
+                                                    </ControlTemplate.Triggers>
+                                                </ControlTemplate>
+                                            </Button.Template>
+                                        </Button>
+                                        <ToggleButton x:Name="SaveAsFormatToggle" Grid.Column="1" Background="{StaticResource SuccessBrush}" Width="25"
+                                                      Visibility="{Binding ImageProcessing.IsAnyVideoSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=invert}">
+                                            <ToggleButton.Template>
+                                                <ControlTemplate TargetType="ToggleButton">
+                                                    <Border Background="{TemplateBinding Background}" CornerRadius="0,3,3,0"><TextBlock Text="▼" FontSize="8" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"/></Border>
+                                                </ControlTemplate>
+                                            </ToggleButton.Template>
+                                        </ToggleButton>
+                                        <Popup IsOpen="{Binding IsChecked, ElementName=SaveAsFormatToggle}" StaysOpen="False" Placement="Top" AllowsTransparency="True">
+                                            <Border Background="{StaticResource SecondaryBackground}" BorderBrush="{StaticResource TertiaryBackground}" BorderThickness="1" CornerRadius="3">
+                                                <StackPanel>
+                                                    <MenuItem Header="{local:Translate Gallery_SaveAsPng}" Command="{Binding ImageProcessing.SaveSelectedImagesAsWithFormatCommand}" Click="SaveFormatMenuItem_Click"
+                                                              Visibility="{Binding DataContext.Settings.SaveFormat, RelativeSource={RelativeSource AncestorType=Window}, Converter={StaticResource HideIfEqualConverter}, ConverterParameter={x:Static local:ImageSaveFormat.Png}}">
+                                                        <MenuItem.CommandParameter><MultiBinding Converter="{StaticResource MultiValueToArrayConverter}"><Binding ElementName="lvOutputs" Path="SelectedItems"/><Binding Source="{x:Static local:ImageSaveFormat.Png}"/></MultiBinding></MenuItem.CommandParameter>
+                                                    </MenuItem>
+                                                    <MenuItem Header="{local:Translate Gallery_SaveAsJpg}" Command="{Binding ImageProcessing.SaveSelectedImagesAsWithFormatCommand}" Click="SaveFormatMenuItem_Click"
+                                                              Visibility="{Binding DataContext.Settings.SaveFormat, RelativeSource={RelativeSource AncestorType=Window}, Converter={StaticResource HideIfEqualConverter}, ConverterParameter={x:Static local:ImageSaveFormat.Jpg}}">
+                                                        <MenuItem.CommandParameter><MultiBinding Converter="{StaticResource MultiValueToArrayConverter}"><Binding ElementName="lvOutputs" Path="SelectedItems"/><Binding Source="{x:Static local:ImageSaveFormat.Jpg}"/></MultiBinding></MenuItem.CommandParameter>
+                                                    </MenuItem>
+                                                    <MenuItem Header="{local:Translate Gallery_SaveAsWebp}" Command="{Binding ImageProcessing.SaveSelectedImagesAsWithFormatCommand}" Click="SaveFormatMenuItem_Click"
+                                                              Visibility="{Binding DataContext.Settings.SaveFormat, RelativeSource={RelativeSource AncestorType=Window}, Converter={StaticResource HideIfEqualConverter}, ConverterParameter={x:Static local:ImageSaveFormat.Webp}}">
+                                                        <MenuItem.CommandParameter><MultiBinding Converter="{StaticResource MultiValueToArrayConverter}"><Binding ElementName="lvOutputs" Path="SelectedItems"/><Binding Source="{x:Static local:ImageSaveFormat.Webp}"/></MultiBinding></MenuItem.CommandParameter>
+                                                    </MenuItem>
+                                                </StackPanel>
+                                            </Border>
+                                        </Popup>
+                                    </Grid>
+                                    
+                                    <Button Content="{local:Translate Tab_DeleteSelected}"
+                                            Background="{StaticResource ErrorBrush}"
+                                        Command="{Binding ImageProcessing.DeleteSelectedImagesCommand}"
+                                        CommandParameter="{Binding ElementName=lvOutputs, Path=SelectedItems}"
+                                            Margin="5,0,0,0" />
                                 </StackPanel>
                             </Border>
                                 <Button Content="&#xE74D;" Style="{StaticResource IconButton}"
