--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -193,6 +193,15 @@
                                                           VerticalAlignment="Center" />
                                     </Border>
                                     <ControlTemplate.Triggers>
+                                        <!-- FIXED: Changed MultiTrigger to MultiDataTrigger for data binding conditions -->
+                                        <MultiDataTrigger>
+                                            <MultiDataTrigger.Conditions>
+                                                <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="False"/>
+                                                <Condition Binding="{Binding IsVirtual}" Value="True"/>
+                                            </MultiDataTrigger.Conditions>
+                                            <Setter TargetName="Border" Property="Background" Value="{StaticResource TertiaryBackground}"/>
+                                        </MultiDataTrigger>
+
                                         <Trigger Property="IsSelected" Value="True">
                                             <Setter Property="Foreground" Value="{StaticResource TextBrush}" />
                                             <Setter TargetName="Border" Property="BorderBrush"
@@ -213,7 +222,17 @@
                         <Grid ToolTip="{Binding RelativePathTooltip}">
                             <StackPanel Orientation="Horizontal"
                                         Visibility="{Binding IsRenaming, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=invert}">
-                                <TextBlock Text="{Binding Header}" VerticalAlignment="Center" />
+                                <TextBlock Text="{Binding Header}" VerticalAlignment="Center">
+                                    <TextBlock.Style>
+                                        <Style TargetType="TextBlock">
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding IsVirtual}" Value="True">
+                                                    <Setter Property="FontStyle" Value="Italic"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </TextBlock.Style>
+                                </TextBlock>
                                 <Button Content="&#xE711;"
                                         Command="{Binding DataContext.CloseTabCommand, RelativeSource={RelativeSource AncestorType=TabControl}}"
                                         CommandParameter="{Binding}"
