--- a/Comfizen/Views/UIConstructor.xaml
+++ b/Comfizen/Views/UIConstructor.xaml
@@ -1179,6 +1179,35 @@
                 </Grid>
             </TabItem>
             
+            <TabItem Header="{local:Translate UIConstructor_AttachmentsHeader}">
+                <Grid Margin="10">
+                    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" MaxWidth="500">
+                        <TextBlock Text="{local:Translate UIConstructor_AttachmentsDescription}"
+                                   TextWrapping="Wrap"
+                                   Foreground="{StaticResource TextSecondaryBrush}"
+                                   Margin="0,0,0,20"/>
+
+                        <TextBlock FontWeight="Bold" Margin="0,0,0,5">
+                            <Run Text="{local:Translate UIConstructor_AttachedFileLabel}"/>
+                            <Run Text="{Binding Workflow.AttachedFullWorkflowName, FallbackValue='none'}"/>
+                        </TextBlock>
+
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                            <Button Content="{local:Translate UIConstructor_AttachFileButton}" 
+                                    Command="{Binding AttachFullWorkflowCommand}" 
+                                    MinWidth="120"/>
+                            <Button Content="{local:Translate UIConstructor_ExportFileButton}" 
+                                    Command="{Binding ExportAttachedWorkflowCommand}" 
+                                    MinWidth="120" Margin="10,0,0,0"/>
+                            <Button Content="{local:Translate UIConstructor_RemoveAttachmentButton}" 
+                                    Command="{Binding RemoveAttachedWorkflowCommand}" 
+                                    Background="{StaticResource ErrorBrush}" 
+                                    Margin="10,0,0,0"/>
+                        </StackPanel>
+                    </StackPanel>
+                </Grid>
+            </TabItem>
+            
             <TabItem Header="{local:Translate UIConstructor_ScriptsHeader}">
                 <Grid Margin="0,10,0,0">
                     <Grid.ColumnDefinitions>
